# ffmpeg_player

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ffmpegplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/audio/: audio_looper.cpp  audio_looper.h  audio_player.cpp  audio_player.h  opensles_player.cpp  opensles_player.h
app/src/main/cpp/common/: gl_utils.cpp  gl_utils.h  matrix_util.h  native_log.h
app/src/main/cpp/decoder/: audio_decoder.cpp  audio_decoder.h  circle_av_frame_queue.cpp  circle_av_frame_queue.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  video_decoder.cpp  video_decoder.h
app/src/main/cpp/dexmuxer/: av_demuxer.cpp  av_demuxer.h  circle_av_packet_queue.cpp  circle_av_packet_queue.h
app/src/main/cpp/encoder/: video_encoder.cpp  video_encoder.h
app/src/main/cpp/filter/: base_filter.cpp  base_filter.h  bg_filter.cpp  bg_filter.h  mediacodec_filter.cpp  mediacodec_filter.h  mediacodec_nv12_filter.cpp
app/src/main/cpp/offscreen/: off_screen_thread.cpp  off_screen_thread.h  on_screen_thread.cpp  on_screen_thread.h
app/src/main/cpp/render/: gl_looper.cpp  gl_looper.h  gl_renderer.cpp  gl_renderer.h  looper.cpp  looper.h
app/src/main/cpp/synchronize/: video_audiio_synchronizer.cpp  video_audiio_synchronizer.h
app/src/main/java/com/example/ffmpegplayer/: ISurfaceCallback.kt  IVideoListener.kt  MainActivity.kt  NativePipPlayerActivity.kt  NativePlayer.kt  NativePlayerActivity.kt  NativeSurfaceView.kt
app/src/main/java/com/example/ffmpegplayer/offScreen/: OffScreenActivity.kt  OffScreenUtil.kt
app/src/main/java/com/example/ffmpegplayer/player/: IVideoListener.kt  NativePlayer.kt
app/src/main/java/com/example/ffmpegplayer/server/: PlayerCacheServer.kt
app/src/main/java/com/example/ffmpegplayer/view/: ISurfaceCallback.kt  NativeSurfaceView.kt
app/src/main/res/layout/: activity_main.xml  activity_native_player.xml  activity_offscreen.xml
app/src/test/java/com/example/ffmpegplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
